--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,13 @@
+/********************************************************
+@ brief:   Help users to flash fw&image, build code&environment and run FAFT test! 
+@ version: V1.9
+@ auther:  wwz & Aldoph Cheng
+@ Time  :  2018/12/04
+********************************************************/
+Fixed problems:
+1.support "octopus" flash function
+
+/********************************************************
 @ brief:   Help users to flash fw&image, build code&environment and run FAFT test! 
 @ version: V1.8
 @ auther:  wwz & Aldoph Cheng
